remove error in settings.py and do a little changein html file

--- a/Django app/app/templates/index.html
+++ b/Django app/app/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>This project is to visualize 100 rows</h1>
+    <h1>This project is to visualize any number of rows</h1>
   </body>
 
   <form action="" method="get">
